--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
   "name": "anyjs",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": [
     "any.js",
     "any.css"
   ],
   "ignore": [
+    "examples",
     "src",
     "test",
     ".bowerrc",
