--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "package",
-  "version": "0.0.0",
+  "name": "anyjs",
+  "version": "0.0.1",
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
@@ -10,6 +10,8 @@
     "gulp": "^3.8.8",
     "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
+    "gulp-git": "^1.8.0",
+    "gulp-tag-version": "^1.3.0",
     "gulp-imagemin": "^1.0.1",
     "gulp-jade": "^0.8.0",
     "gulp-jshint": "^1.8.5",
@@ -18,6 +20,7 @@
     "gulp-mocha": "^2.2.0",
     "gulp-mocha-phantomjs": "^0.11.0",
     "gulp-postcss": "^2.0.0",
+    "gulp-shell": "^0.5.2",
     "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.1",
     "chai": "^3.5.0",
